Revision history for Data-Fake

{{$NEXT}}

0.005     2020-10-01 16:59:05-04:00 America/New_York

    [FIXED]

    - Require Import::Into 1.002005

    - Allow calling text generators with no argument

0.004     2018-06-20 14:40:25-06:00 America/Denver

    [ADDED]

    - fake_flatten to flatten hash or array generators to a list

    [DOCS]

    - Fixed an example involving dates

0.003     2016-08-20 21:25:58-04:00 America/New_York

    [DOCS]

    - Improved description of escaping # in fake_digits

0.002     2015-02-05 18:54:46-05:00 America/New_York

    [FIXES]

    - Work around Time::Piece portability problems; requires
      Time::Piece 1.27

0.001     2015-01-21 16:08:10-05:00 America/New_York

    - First release
